fourth/src/App.css
.App {
  text-align: center;
  background-color: white;
}

body {
  background-image: url('images/picnicbgv1.png');
  width: 1000px;
  margin: 0 auto;
  font-family: Roboto;
  font-size: 1.1.em;
}

p {
  line-height: 125%;
}

.header {
  background-color: white;
  background-image: url('images/picnicheaderv1.png');
  background-repeat: no-repeat;
  height: 415px;
}

.header-links {
  display: flex;
  justify-content: space-evenly;
  width: 400px;
  margin: 0 auto;
  border-bottom: 1px solid #eae7de;
  padding-top: 375px;
}

.header a:link {
  color: #55614c;
	padding-left: 30px;
	padding-right: 30px;
	text-transform: uppercase;
	text-decoration: none;
  font-size: 1em;
}

.header a:visited {
	color: #55614c;
	padding-left: 30px;
	padding-right: 30px;
	text-transform: uppercase;
	text-decoration: none;
  font-size: 1em;
}
   
.header a:hover {
	color: #e22d45;
	/* padding-top: 4px;
	padding-bottom: 2px; */
	background-color: #ffffff;
	padding-left: 30px;
	padding-right: 30px;
	text-transform: uppercase;
	border-bottom: 1px solid #e22d45;
  font-size: 1em;
}

a:link {
	color: #515a63;
	text-decoration: none;
  padding-left: 0px;
  font-size: 1.1em;
}

a:visited {
	color: #287eae;
	text-decoration: none;
  padding-left: 0px;
  font-size: 1.1em;
}

a:hover {
	color: #e22d45;
	text-decoration: none;
  padding-left: 0px;
  font-size: 1.1em;
	border-bottom: 2px solid #e22d45;
}

.location {
  background-color: white;
}

h1 {
  display: flex;
  justify-content: flex-start;
  margin-left: 11%;
  margin-bottom: 4%;
  font-family: 'Righteous', cursive;
  color: #287eae;
  font-size: 2.4em;
  text-transform: uppercase;
}

.address {
  line-height: .5rem;
  margin-top: 3%;
  margin-bottom: 2%;
}

.map {
  margin-bottom: 5%;
}

.menu {
  background-color: #ebebea;
  margin-top: 5%;
  padding-bottom: 1%;
}

.menu h1 {
  padding-top: 3%;
}



table {
	border-collapse: collapse;
  margin: auto;
}

.total {
  margin-bottom: 5%;
}

.total td {
  border-top: none;
  font-weight: bold;
  color: #55614c;
  font-size: 1.1em;
}

th {
	color: #55614c;
	font-size: 1.1em;
}

table, th, td {
	text-align: left;
  border: 1px solid #c7c7c7;
	padding-left: 30px;
	padding-right: 30px;
	padding-top: 5px;
	padding-bottom: 5px;
  width: 700px;
  margin-bottom: 0%;
  text-transform: capitalize;
}

form {
  display: flex;
  flex-direction: column;
  margin-top: 3%;
}

form label {
  font-size: 1em;
}

form input {
  width: 30%;
  margin: 10px auto;
  height: 25px;
  border-radius: 5px;
  outline: none;
  border: 1px solid #c7c7c7;
}

span p {
  color: red;
  margin-top: -2px;
}

.error {
  color: red;
  margin-bottom: 10px;
}

form textarea {
  margin: 10px auto;
  outline: none;
  resize: none;
  border-radius: 5px;
  border: 1px solid #c7c7c7;
  box-shadow: 1px 2px #e0e0e0;
  height: 50px;
}

.contact button {
  background-color: #e22d45;
  font-size: 1.1em;
  border: none;
  color: #FFFFFF;
  padding: 16px 32px;
  text-decoration: none;
  margin: 15px auto;
  cursor: pointer;
  box-shadow: 2px 3px #e0e0e0;
  border-radius: 3px;
  width: 15%;
}

.contact-p {
  line-height: .5rem;
  margin-top: 4%;
  margin-bottom: 2%;
}

.contact-a {
  margin-top: 6%;
  margin-bottom: 4%;
}


.footer {
  display: flex;
  justify-content: space-between;
  width: 900px;
  margin: 0 auto;
  color: #55614c;
  font-size: .8em;
}

@media only screen and (max-width: 768px) {
  body {
    width: 100%;
    margin: 0 auto;
    font-size: 2em;
    background-color: white;
    background-image: none;
  }

  .header {
    background-color: white;
    background-image: url('images/picnicheaderv2.png');
  }

  .header-links {
    width: 325px;
    font-size: 1.1em;
    justify-content: center;
  }

  .location {
    margin-top: 75px;
  }

  .address {
    padding-left: 40px;
    padding-right: 40px;
  }

  h1 {
    font-size: 1.7em;
    text-align: center;
    margin-left: 40px;
    margin-right: 40px;
    justify-content: center;
  }

  p {
    margin-bottom: 60px;
    line-height: 140%;
  }

  .map iframe {
    width: 600px;
    height: 400px;
  }

  .form {
    padding-left: 40px;
    padding-right: 40px;
  }

  .menu {
    padding-top: 10px;
    padding-bottom: 50px;
  }

  .contact-p {
    padding-left: 40px;
    padding-right: 40px;
  }

  table {
   width: 91%;
  }

  form label {
    font-size: 1em;
  }

  .contact button {
    font-size: 1.2rem;
    text-align: center;
    font-weight: bold;
    width: auto;
    white-space: nowrap;
    padding-top: 25px;
    padding-bottom: 25px;
  }

  form textarea {
   width: 75%;
    height: 125px
  }

  form input {
    width: 75%;
    height: 50px;
  }

  .footer {
    width: 90%;
    text-align: center;
    padding-top: 50px;
  }

  td {
    line-height: 140%;
    font-size: 1em;
  }

  th{
    line-height: 160%;
  }
}

@media only screen and (max-width: 414px) {
  body {
    width: 100%;
    margin: 0 auto;
    font-size: 1.4em;
    background-color: white;
    background-image: none;
  }

  .header {
    background-color: white;
    background-image: url('images/picnicheaderv3.png');
    height: 300px;
    width: 100%;
    margin-right: 0px;
    padding-right: 0px;
  }

  .header-links {
    width: 75%;
    font-size: 1.1em;
    padding-top: 250px;
    justify-content: center;
  }

  .location {
    margin-top: 20px;
    margin-left: 15px;
    margin-right: 15px;
  }

  .address {
    padding-left: 15px;
    padding-right: 15px;
  }

  .contact {
    margin-left: 15px;
    margin-right: 15px;
  }

  h1 {
    font-size: 1.3em;
    text-align: center;
    margin-bottom: 40px;
    justify-content: center;
  }

  p {
    margin-bottom: 40px;
    line-height: 140%;
  }

  .map iframe {
    width: 330px;
    height: 300px;
  }

  .form {
    padding-left: 40px;
    padding-right: 40px;
  }

  .menu {
    padding-top: 10px;
    padding-bottom: 50px;
    
  }

  .contact-p {
    padding-left: 40px;
    padding-right: 40px;
  }

  table {
   width: 90%;
  }

  form label {
    font-size: 1em;
  }

  .contact button {
    font-size: 1.1rem;
    text-align: center;
    font-weight: bold;
    width: auto;
    white-space: nowrap;
    padding-top: 25px;
    padding-bottom: 25px;
  }

  form textarea {
   width: 75%;
    height: 125px
  }

  form input {
    width: 75%;
    height: 50px;
  }

  .footer {
    width: 90%;
    text-align: center;
    padding-top: 50px;
  }

  td {
    line-height: 140%;
    font-size: 1em;
  }

  th {
    line-height: 160%;
    font-size: 1em;
  }

  .total td {
    font-size: 1em;
  }
}

